<resources>

    <string name="app_name">Transfer Time Calculator 2 </string>
    <string name="network_speed_in_mbps">Network speed in Mbps</string>
    <string name="network_speed">Network Speed:</string>
    <string name="mbps">Mbps</string>
    <string name="transfer_time_is">Transfer time is</string>
    <string name="file_size_in_mibs">File size in MiBs</string>
    <string name="mibs">MiBs</string>
    <string name="file_size">File Size:</string>
    <string name="_0">0</string>
    <string name="seconds">seconds.</string>
    <string name="transfer_time">transfer_time</string>
</resources>
